# trifinger-decision-transformer

./: README.md  setup.cfg  trifinger.toml
trifinger_decision_transformer/: decision_transformer.py  example.py
trifinger_decision_transformer/policies/: crr_old_data.pt
