[metadata]
name = trifinger_decision_transformer
version = attr: trifinger_decision_transformer.__version__
description = Package for submitting a Decision Transformer policy to the TriFinger cluster
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause


[options]
packages = find:
install_requires =
    numpy
    gym
    torch
    # trifinger_rl_datasets
    trifinger_rl_datasets @ git+https://github.com/nicoguertler/trifinger_rl_datasets_test.git@master
    d3rlpy

[options.package_data]
trifinger_decision_transformer.policies = *.d3
